--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./fonts/Inter.woff2");
+  src: url("/fonts/Inter.woff2") format("woff2");
+  font-display: swap;
 }
 
 @theme {
